--- a/css/styles.css
+++ b/css/styles.css
@@ -24,8 +24,16 @@ a:hover {
     margin-top: 25px;
 }
 
-.nav-bar h3 {
-    margin-left: 25px ;
+.nav-bar img{
+    height: 50px;
+    width: 50px;
+    border-radius: 100%;
+    margin-left: 25px;
+}
+
+.nav-links {
+    display: flex;
+    align-items: center;
 }
 
 .nav-links ul {
@@ -36,6 +44,7 @@ a:hover {
 
 .nav-links li {
     list-style-type: none;
+    justify-content: space-between;
 }
 
  
