--- a/css/styles.css
+++ b/css/styles.css
@@ -51,7 +51,7 @@ a:hover {
 /* styling for the header section  */
 .introduction {
     display: flex;
-    margin: 100px auto;
+    margin: 250px auto 400px auto;
     width: 800px;
     justify-content: space-between;
 }
@@ -73,3 +73,28 @@ a:hover {
     width: 300px;
     border-radius: 50%;
 }
+
+/* styling for the project section  */
+main h2 {
+    text-align: center;
+    margin-bottom: 50px;
+}
+.projects {
+    margin: auto;
+    display: flex;
+    height: 1000px;
+    width: 800px;
+    justify-content: space-around;
+}
+
+.project-list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+ }
+
+ .project-list img {
+    margin: 10px 0;
+    height: 100px;
+    width: 200px;
+ }
