--- a/css/styles.css
+++ b/css/styles.css
@@ -76,6 +76,7 @@ a:hover {
 main h2 {
     text-align: center;
     margin-bottom: 50px;
+    background-color: #F1A661;
 }
 .projects {
     margin: auto;
