--- a/css/styles.css
+++ b/css/styles.css
@@ -158,3 +158,31 @@ main h2{
     margin: 0 auto;
 
 }
+
+/* footer section  */
+footer {
+    background-color: #E38B29;
+}
+
+footer h2 {
+    text-align: center;
+    margin: 20px;
+}
+
+footer {
+    color: #FDEEDC;
+    display: flex;
+    width: 100%;
+    text-align: center;
+    flex-direction: column;
+}
+
+footer a {
+    color: #FDEEDC;
+}
+
+footer li {
+    margin: 10px;
+}
+
+
